---
source: src/lib.rs
expression: "Lexer::new(\"! false || ! true\").filter_map(|x|\n                                               x.ok()).map(|(_, x, _)|\n                                                               match x {\n                                                                   Token::Ident(x)\n                                                                   |\n                                                                   Token::NumLit(x)\n                                                                   |\n                                                                   Token::StrLit(x)\n                                                                   =>\n                                                                   format!(\"{}\",\n                                                                           x),\n                                                                   x =>\n                                                                   format!(\"{}\",\n                                                                           x),\n                                                               }).collect::<Vec<_>>()"

---
[
    "!",
    "False",
    "||",
    "!",
    "True",
]
